--- a/lungDisease.ipynb
+++ b/lungDisease.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Covid-19 Project",
+      "name": "lungDisease",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM5mDI2vPO5FLz6dpG4Zx1o",
+      "authorship_tag": "ABX9TyMxNT8cV5jimAwHr9SvP4vJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/mjee12/lungDisease/blob/master/Covid_19_Project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/mjee12/lungDisease/blob/master/lungDisease.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -938,7 +938,7 @@
         "colab": {}
       },
       "source": [
-        "xray_test_dir = '/content/drive/My Drive/4. Operations Department/Test'"
+        "xray_test_dir = '/content/drive/My Drive/Covid-19 Project/Test'"
       ],
       "execution_count": null,
       "outputs": []
